<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>ublox_rtk</name>
  <version>0.0.0</version>
  <description>This is the meta package of the ublox_rtk.</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/sbgisen/ublox_rtk</url>
  <url type="bugtracker">https://github.com/sbgisen/ublox_rtk/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ublox_ntrip_client</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
